# torq-compiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  iree_compiler_plugin.cmake  iree_runtime_plugin.cmake  pytest.ini  requirements.txt
compiler/: CMakeLists.txt  pyproject.toml  setup.py
compiler/bindings/python/: CMakeLists.txt
compiler/tools/: CMakeLists.txt  torq-compile-main.cc  torq-mlir-lsp-server.cc
compiler/torq/: CMakeLists.txt  PluginRegistration.cpp
compiler/torq/Codegen/: AddDeallocationPass.cpp  AnalyzeTensorSizesPass.cpp  AssignAddressesPass.cpp  AssignNSSProgramsAddressesPass.cpp  AssignObjectsIdentifiersPass.cpp  AssignOperationsToCpuProgramsPass.cpp  AttachX86CpuObjectsPass.cpp  BufferizationUtils.cpp  BufferizationUtils.h  CMakeLists.txt  CheckCssStackSizePass.cpp  CompileCpuProgramsPass.cpp  CompileInvocationUtils.cpp  CompileInvocationUtils.h  CompileNSSInvocationsPass.cpp  CompileSliceInvocationPass.cpp  CompileSliceInvocationsPass.cpp  CompileTimeConstComputePass.cpp  CompileTimeConstOutlinePass.cpp  CompileTimeConstStubsPass.cpp  ConvertTensorPadToLinalgPass.cpp  CreateGlobalsPass.cpp  EncodeTensorsPass.cpp  ExecutorAssignmentPass.cpp  FoldConvertPass.cpp  FoldPValueInitsPass.cpp  FuseActWithConvPass.cpp  KernelSelectionPass.cpp  LinalgSlicingPass.cpp  LinalgTilePass.cpp  LowerArithConstantsPass.cpp  LowerCallProgramToStartWaitPass.cpp  LowerHostCopiesToNpuPass.cpp  MapBindingsPass.cpp  MarkHostExecutorPass.cpp  OutlineCpuProgramsPass.cpp  OutlineNSSProgramsPass.cpp  OutlineSliceProgramsPass.cpp  OutlineUtils.cpp  OutlineUtils.h  (+31 more)
compiler/torq/Codegen/css_bootstrap/: CMakeLists.txt  css_kernel.c  css_kernel.c.inc  css_kernel.ld  css_kernel.s  css_kernel_kelvin.c  css_kernel_qemu.c  css_kernel_riscv.S  css_kernel_riscv.S.in  css_kernel_riscv.cpp.in  css_kernel_riscv.h  css_kernel_riscv.h.in
compiler/torq/Conversions/: CMakeLists.txt
compiler/torq/Conversions/LinalgToTorqHL/: ActPatterns.cpp  AluPatterns.cpp  ArithToTorqHLPattern.cpp  CMakeLists.txt  ClampPattern.cpp  ConstantFold.cpp  Conv1DMatmulPattern.cpp  Conv1DPattern.cpp  Conv2DMatmulPattern.cpp  Conv2DOpBigStridePattern.cpp  Conv2DPattern.cpp  ElementWiseBinaryPattern.cpp  ExpPattern.cpp  ExpandWeightsPattern.cpp  ExtractPattern.cpp  FCPattern.cpp  GeluPattern.cpp  LinalgTilePass.cpp  LinalgToTorqGeneric.cpp  LinalgToTorqGeneric.td  LinalgToTorqHLPrePattern.cpp  LinalgToTorqHLPrePatternLowPrio.cpp  MatchingFunctions.h  MatmulPattern.cpp  MulPattern.cpp  OpPatternOptions.h  Passes.cpp  Passes.h  Passes.td  PassesDetail.h  PatternUtils.cpp  PatternUtils.h  Patterns.cpp  Patterns.h  PoolingPattern.cpp  ReduceMeanPattern.cpp  SigmoidPattern.cpp  SoftmaxPattern.cpp  TensorToTorqOrLinalgPattern.cpp  TrigPattern.cpp  (+1 more)
compiler/torq/Conversions/TorqHLToLinalg/: CMakeLists.txt  Passes.cpp  Passes.h  Passes.td  PassesDetail.h  Patterns.cpp  Patterns.h
compiler/torq/Conversions/TorqHLToTorqHW/: ActPattern.cpp  AddPattern.cpp  ArgMaxPattern.cpp  AvgpoolPattern.cpp  BroadcastPattern.cpp  CMakeLists.txt  Conv1DPattern.cpp  Conv2DPattern.cpp  Conv2DToHw.cpp  ConvertPattern.cpp  DWPattern.cpp  DWToHw.cpp  DepthToSpacePattern.cpp  ElementWiseBinaryPattern.cpp  ElementWiseShiftPattern.cpp  ElementWiseUnaryPattern.cpp  ExpandWeightsPattern.cpp  FCPattern.cpp  FCToHw.cpp  FMAPattern.cpp  FillPattern.cpp  GatherPattern.cpp  GenericOpPattern.cpp  IdentityPattern.cpp  Im2ColPattern.cpp  InterleavedInsertPattern.cpp  MatMulPattern.cpp  MaxPool2dPattern.cpp  MaxPool2dToHw.cpp  MulPattern.cpp  Passes.cpp  Passes.h  Passes.td  PassesDetail.h  Patterns.cpp  Patterns.h  ReduceMeanPattern.cpp  ReducePattern.cpp  ResizeNearestNeighborPattern.cpp  ScatterPattern.cpp  (+6 more)
compiler/torq/Conversions/TosaToLinalg/: CMakeLists.txt  Passes.cpp  Passes.h  Passes.td  PassesDetail.h  Patterns.cpp  Patterns.h
compiler/torq/Conversions/TosaToTorqHL/: CMakeLists.txt  Passes.cpp  (+5 more)
compiler/torq/Pipelines/: CMakeLists.txt  InputConversionPassPipelines.cpp  InputConversionPassPipelines.h  TranslationPassPipelines.cpp  TranslationPassPipelines.h
compiler/torq/Serialization/: CMakeLists.txt  DescGen.cpp  DescGen.h  Serialization.cpp  Serialization.h
compiler/torq/Utils/: CMakeLists.txt  CodeSizeUtils.cpp  CodeSizeUtils.h  ComputeConstants.cpp  ComputeConstants.h  ConversionUtils.cpp  ConversionUtils.h  EncodingUtils.cpp  EncodingUtils.h  ExecutorAssignment.cpp  ExecutorAssignment.h  InvocationUtils.cpp  InvocationUtils.h  Kernel.cpp  Kernel.h  LayoutTransformUtils.cpp  LayoutTransformUtils.h  MemoryUtils.cpp  MemoryUtils.h  PassProgressUtils.cpp  PassProgressUtils.h  ShapeUtils.cpp  ShapeUtils.h  StorageUtils.cpp  StorageUtils.h  TorqHw.cpp  TorqHw.h  TorqMatcherBase.h  TorqUtils.cpp  TorqUtils.h
compiler/torq/python/: CMakeLists.txt
runtime/: CMakeLists.txt  pyproject.toml  setup.py
runtime/bindings/python/: CMakeLists.txt
runtime/driver/: CMakeLists.txt  TestVectorWriter.cc  TestVectorWriter.h  TorqDump.cc  TorqDump.h  TorqExecutable.cc  TorqExecutable.h  TorqIO.cc  TorqIO.h  native_executable.cc  native_executable.h  nop_executable_cache.cc  nop_executable_cache.h  torq_allocator.c  torq_allocator.h  torq_command_buffer.c  torq_command_buffer.h  torq_device.c  torq_device.h  torq_driver.c  torq_driver.h  torq_event.c  torq_event.h  torq_profile_scope.cc  torq_profile_scope.h  torq_semaphore.c  torq_semaphore.h
runtime/driver/registration/: CMakeLists.txt  driver_module.c  driver_module.h
runtime/schemas/: CMakeLists.txt  torq_executable_def.fbs
runtime/tools/: CMakeLists.txt  torq-run-module-main.cpp
runtime/torq_hw/: CMakeLists.txt
runtime/torq_hw/inc/: Timer.h  TorqDeviceBufferAPI.h  TorqEventLog.h  TorqHw.h  TorqUtils.h
runtime/torq_hw/src/: CoralNpuCSSSimulation.cpp  CoralNpuCSSSimulation.h  MpactCSSSimulation.cpp  MpactCSSSimulation.h  QemuCSSSimulation.cpp  QemuCSSSimulation.h  TorqAstraMachina.cpp  TorqAstraMachina.h  TorqAwsFpga.cpp  TorqAwsFpga.h  TorqDeviceBufferAPI.cpp  TorqEventLog.cpp  TorqHw.cpp  TorqSimulator.cpp  TorqSimulator.h  TorqSoCFpga.cpp  TorqSoCFpga.h  TorqUtils.cpp
(+964 files in other folders)
